test_case/rust-lang_rust/53748_416404317_20.rs
compile_fail,E0433\nlet map = HashMap::new();\n// error: failed to resolve. Use of undeclared type or module `HashMap`\n